# bp-wstatgen

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.txt  README.md  README.txt
src/: CMakeLists.txt  layeredmarkovstatistics.cc  layeredmarkovstatistics.h  markovstatistics.cc  markovstatistics.h  statistic.cc  statistic.h  statistics.cc  statistics.h  wstatgen.cc
